--- a/templates/base.html
+++ b/templates/base.html
@@ -13,12 +13,12 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
            
-<a class="navbar-brand" href="{{ url_for('index') }}">
+<a class="navbar-brand d-flex align-items-center" href="{{ url_for('index') }}">
 
-    <img src="{{ url_for('static', filename='images/logo_principal.png') }}"  height="50" class="d-inline-block align-text-top me-2">
+    <img src="{{ url_for('static', filename='images/logo_principal.png') }}"  height="50"  class="d-inline-block align-text-top me-2">
     Confeitando com Arte
 </a>
 
